--- a/src/app/pages/validation-management/validation-management.component.scss
+++ b/src/app/pages/validation-management/validation-management.component.scss
@@ -12,7 +12,7 @@ form {
     display: block;
   }
   
-  input, textarea {
+  input {
 		display: block;
 		width: 100%;
 		height: 27px;
@@ -25,11 +25,6 @@ form {
 		border-radius: 4px;
   }
   
-  textarea {
-    min-height: 100px;
-    padding: 12px;
-  }
-  
   button {
     margin-top: 4px;
     color: #fff;
@@ -38,7 +33,8 @@ form {
     border-radius: 3px;
     padding: 4px 8px;
     font-size: 1em;
-    font-weight: 300;
+		font-weight: 300;
+		margin-top: 20px;
   }
   
   button[disabled] {
@@ -46,7 +42,15 @@ form {
     border-color: #2e6da4;
     opacity: .65;
     cursor: not-allowed;
-  }
+	}
+	
+	.password {
+		display: -webkit-box;
+
+		.showPassword {
+			margin-left: 10px;
+		}
+	}
   
   control-messages div {
     color: #E82C0C;
